k8s/product-service/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-canary
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels: { app: product-service, track: canary }
  template:
    metadata:
      labels: { app: product-service, track: canary }
    spec:
      containers:
        - name: product-service
          image: ghcr.io/13nour11/enterprise-ecommerce-platform/product-server:sha-e5d5413
          ports: [{ containerPort: 8081 }]
          resources:
            requests: { cpu: 100m, memory: 256Mi }
            limits: { cpu: 500m, memory: 512Mi }
