k8s/product-service/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: product-service
  namespace: ecommerce
spec:
  hosts: [product-service]
  http:
    - route:
        - destination: { host: product-service, subset: stable }
          weight: 80
        - destination: { host: product-service, subset: canary }
          weight: 20
